--- a/landing/src/components/Hero/Hero.scss
+++ b/landing/src/components/Hero/Hero.scss
@@ -21,7 +21,7 @@
 	.color-bar-image {
 		position: absolute;
 		z-index: -1;
-		width: 413px;
+		width: 100%;
 		height: 421.18px;
 		top: 56%;
 		left: 0px;
